Fix: overflow-x: hidden not  working - set position to relative on body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ html {
 }
 
 body {
+    position: relative;
     scroll-behavior: smooth;
     overflow-y: scroll;
     overflow-x: hidden;
